# JDA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.zh.md  config.md  config.template.json  config.zh.md  libjda.cmake
c/: .gitignore  CMakeLists.txt  README.md  jda.c  jda.h  main.cpp
include/jda/: cart.hpp  cascador.hpp  common.hpp  data.hpp  jda.hpp  postf.hpp
model/: README.md  config.json
script/: README.md  celeba.py  for_tcdcn.py  gen.py  log.py  post_celeba.py
src/: detect.cpp  live.cpp  main.cpp  test.cpp  train.cpp
src/jda/: boost_cart.cpp  btcart.cpp  cart.cpp  cascador.cpp  common.cpp  data.cpp  jda.cpp  postf.cpp
